--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<option>R. URIBE</option>
 						<option>C. BOLIVAR</option>
 						<option>SUMAPAZ</option>
-						<option>MUNICIPIOS ALEDAÑOS BOGOTA D.C.</option>
+						<option>MUNICIPIOS ALEDA&Ntilde;OS BOGOTA D.C.</option>
 					</select>
 					<br/><br/>
 					<!--Botón de registro del form-->
