--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 							</div>
 							<div class="form-check">
 			  					<input class="form-check-input" type="radio" name="specie" id="specie-canine-check" disabled>
-			  					<label class="form-check-label" for="specie" name="Canino">Canino</label>
+			  					<label class="form-check-label" for="specie">Canino</label>
 							</div>
 							<div class="form-check">
 								<input class="form-check-input" type="radio" name="specie" id="specie-feline-check" disabled>
-								<label class="form-check-label" for="specie" name="Felino">Felino</label>
+								<label class="form-check-label" for="specie">Felino</label>
 							</div>
 				      		<!--Filtros por sexo-->
 							<div class="form-check">
@@ -249,7 +249,7 @@
 					</div>			
 					<div class="col col-lg text-center">
 						<div class="p-2 bg-light border">
-							<table class="table table-bordered border-primary table-sm">
+							<table class="table table-bordered border-primary table-sm" id="pet-table">
 								<thead>
 									<th class="column-header column-header-id">ID</th>
 									<th class="column-header">Fecha de Registro</th>
