--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
 				<div class="row row-cols-2">
 					<div class="col col-sm-2">
 						<div class="p-2 bg-light border">
+							<!--Acciones-->
+							<h4>Acciones</h4>
+							<div>
+								<!--Botón de acciones-->
+								<button id="edit-button" class="btn btn-primary">Editar Registro</button>
+							</div>
+							&NonBreakingSpace;
 							<!--Filtros-->
 							<h4>Filtros</h4>
 							<div>
@@ -247,11 +254,10 @@
 							</div>
 						</div>
 					</div>			
-					<div class="col col-lg text-center">
+					<div class="col col-xl text-center">
 						<div class="p-2 bg-light border">
 							<table class="table table-bordered border-primary table-sm" id="pet-table">
 								<thead>
-									<th class="column-header column-header-id">ID</th>
 									<th class="column-header">Fecha de Registro</th>
 									<th class="column-header">Nombre del Propietario</th>
 									<th class="column-header">Nombre de la Mascota</th>
