--- a/edit.html
+++ b/edit.html
@@ -15,8 +15,8 @@
 						<h4>Formulario</h4>
 						<div class="col">
 							<div>
-								<label>Id</label>
-								<input id="id-input" type="text">
+								<label>Posición</label>
+								<input id="id-input" type="Number" min="1">
 								<button id="search-button" class="btn btn-primary">Buscar</button>
 							</div>
 						</div>
@@ -27,7 +27,7 @@
 						<div class="col col-sm-3">
 							<div>
 								<label>Tama&ntilde;o</label>
-								<select name="size" id="petsize-select">
+								<select name="size" id="petsize-select" disabled>
 									<option selected disabled>No Registrado</option>
 									<option>Miniatura</option>
 									<option>Peque&ntilde;o</option>
@@ -39,7 +39,7 @@
 						<div class="col col-sm-3">
 							<div>
 								<label>Potencialmente peligroso</label>
-								<select name="dangerous" id="petdanger-select">
+								<select name="dangerous" id="petdanger-select" disabled>
 									<option selected disabled>No Registrado</option>
 									<option>Si</option>
 									<option>No</option>
@@ -49,7 +49,7 @@
 						<div class="col col-sm-2">
 							<div>
 								<label>Localidad</label>
-								<select name="neighborhood" id="petneighborhood-select">
+								<select name="neighborhood" id="petneighborhood-select" disabled>
 									<option selected disabled>No Registrado</option>
 									<option>USAQUEN</option>
 									<option>CHAPINERO</option>
@@ -81,7 +81,7 @@
 						<div class="col">
 							<!--Botón de registro-->
 							<div>
-								<button id="refresh-button" type="submit" class="btn btn-primary">Actualizar</button>
+								<button id="refresh-button" type="submit" class="btn btn-primary" disabled>Actualizar</button>
 							</div>
 						</div>
 					</div>
