--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 							&NonBreakingSpace;
 							<!--Filtros-->
 							<h4>Filtros</h4>
+							<h6>(Max 3)</h6>
 							<div>
 								<!--Botón de filtros-->
 								<button id="filter-button" class="btn btn-primary">Aplicar Filtros</button>	
